# HIMLoco-Fork

./: MUJOCO_LOG.TXT  bashrc
deploy_mujoco/: beitong_game.py  go2.yaml  pdandrl.py  play_bk_joystick_rsl_rl copy.py  play_bk_joystick_rsl_rl.py  play_joystick_rsl_rl_beitong.py  play_joystick_rsl_rl_fixed.py  play_mujoco.py  simulation_refactor.py
deploy_mujoco/aliengo_description/: aliengo.xml  scene_mjx_flat_terrain.xml
deploy_mujoco/aliengo_mj_description-master/: CMakeLists.txt  README.md
deploy_mujoco/aliengo_mj_description-master/mc_mujoco/: aliengo.in.yaml
deploy_mujoco/aliengo_mj_description-master/xml/: aliengo.xml  scene_mjx_flat_terrain.xml  scene_terrain.xml
legged_gym/legged_gym/: __init__.py
legged_gym/legged_gym/envs/: __init__.py
legged_gym/legged_gym/scripts/: train.py
legged_gym/legged_gym/utils/: __init__.py  helpers.py  isaacgym_stub.py  task_registry.py
