cmake_minimum_required(VERSION 3.1)

project(aliengo_mj_description VERSION 1.0.0)

find_package(mc_mujoco REQUIRED)

option(SRC_MODE "Use files in the repository instead of installed files" OFF)

set(ALIENGO_XML_MODEL_PATH "xml/aliengo.xml")
set(ALIENGO_PDGAINS_PATH "pdgains/PDgains_sim.dat")

if(SRC_MODE)
  set(ALIENGO_XML_MODEL_PATH "${CMAKE_CURRENT_SOURCE_DIR}/${ALIENGO_XML_MODEL_PATH}")
  set(ALIENGO_PDGAINS_PATH "${CMAKE_CURRENT_SOURCE_DIR}/${ALIENGO_PDGAINS_PATH}")
else()
  set(ALIENGO_XML_MODEL_PATH "${MC_MUJOCO_SHARE_DESTINATION}/ALIENGO/${ALIENGO_XML_MODEL_PATH}")
  set(ALIENGO_PDGAINS_PATH "${MC_MUJOCO_SHARE_DESTINATION}/ALIENGO/${ALIENGO_PDGAINS_PATH}")
endif()

configure_file(mc_mujoco/aliengo.in.yaml "${CMAKE_CURRENT_BINARY_DIR}/mc_mujoco/aliengo.yaml")
install(FILES "${CMAKE_CURRENT_BINARY_DIR}/mc_mujoco/aliengo.yaml" DESTINATION "${MC_MUJOCO_SHARE_DESTINATION}")

install(DIRECTORY meshes DESTINATION "${MC_MUJOCO_SHARE_DESTINATION}/ALIENGO" FILES_MATCHING PATTERN "*.stl")
install(DIRECTORY pdgains DESTINATION "${MC_MUJOCO_SHARE_DESTINATION}/ALIENGO" FILES_MATCHING PATTERN "*.dat")
install(DIRECTORY xml DESTINATION "${MC_MUJOCO_SHARE_DESTINATION}/ALIENGO" FILES_MATCHING PATTERN "*.xml")
